# sai

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TECHSPEC.md
.github/workflows/: build.yaml
analysis_history/: 2025-12-07-01-TEST_ANALYSIS.md
docs/: TECHSPEC.md  guardrail_deterministic_tests.md
images/: sai-logo-smaller.xcf  sai-logo-smallest.xcf
prompt-history/: 2025-12-06-02-feature-explain-and-analyze.md  2025-12-07-01.test-analysis.md
prompts/: data-focussed-tool.yml  default-config.yml.md  git-full.yml  git-safe.yml  safe-destructive-tools.yml  standard-tools.yml
releases/: RELEASE_v0.10.0.md
scripts/: dev-check.sh  pre-publish.sh
src/: app.rs  cli.rs  config.rs  executor.rs  help.rs  history.rs  llm.rs  main.rs  ops.rs  peek.rs  prompt.rs  safety.rs  scope.rs
templates/: default-config.yaml
templates/help/: advanced.txt  analyze.txt  config.txt  explain.txt  history.txt  ops.txt  overview.txt  packages.txt  peek.txt  quickstart.txt  safety.txt  scope.txt  tools.txt  topics.txt  unsafe.txt
